salesforce-migration/force-app/main/default/objects/Product2/fields/Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Count__c</fullName>
    <label>Order Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>