salesforce-migration/force-app/main/default/objects/Product2/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>