salesforce-migration/force-app/main/default/objects/Product2/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder Level</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
</CustomField>