salesforce-migration/force-app/main/default/objects/Product2/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <label>Slug</label>
    <type>Text</type>
    <unique>true</unique>
    <length>255</length>
</CustomField>